--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "minecraft-data": "^3.15.2",
-    "minecraft-protocol": "^1.36.0",
+    "minecraft-protocol": "github:frej4189/node-minecraft-protocol",
     "prismarine-biome": "^1.1.1",
     "prismarine-block": "^1.13.1",
     "prismarine-chat": "^1.7.1",
